# esp32-matter-app

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  DeviceCallbacks.cpp  DeviceCallbacks.h  Kconfig.projbuild  main.cpp
main/zap/: app.matter  app.zap
